--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,7 +5,7 @@
               <br/><br/>
               <h2>About Landing-Page</h2>
               <br/>
-                <p>Landing-Page is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/landing-page/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
+                <p>My name is Preston Wu, I am a first generation American born chinese. I moved from Utah to New York when I was two years old and have been a New York ressident since. I currently am a freshmen at Stony Brook University pursuing a bachelors degree in electrical engineering. I am not single; I'm happily taken by an amazing gril from NYU. <a href="http://startbootstrap.com/template-overviews/landing-page/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
                 <p>The Jekyll version is brought to you by <a href="https://github.com/swcool">Shane Weng</a></p>
                 <p>This theme features stock photos by <a href="http://join.deathtothestockphoto.com//">Death to the Stock Photo</a>.</p>
                 <p>Landing-Page includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
